--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,27 @@
     <meta name="author" content="Phoenixcoded" />
     <!-- Favicon icon -->
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.css"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css"
+    />
+    <script
+      type="text/javascript"
+      charset="utf8"
+      src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"
+    ></script>
     <!-- prism css -->
     <link rel="stylesheet" href="assets/css/plugins/prism-coy.css" />
+    <link rel="stylesheet" href="assets/css/fontawesome/font-awesome.min.css" />
     <!-- vendor css -->
     <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- <link rel="stylesheet" href="assets/css/main.css" /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -33,192 +49,7 @@
         <div class="loader-fill"></div>
       </div>
     </div>
-    <!-- <nav class="pcoded-navbar theme-horizontal menu-light brand-blue">
-      <div class="navbar-wrapper container">
-        <div class="navbar-content sidenav-horizontal" id="layout-sidenav">
-          <ul class="nav pcoded-inner-navbar sidenav-inner">
-            <li class="nav-item pcoded-menu-caption">
-              <label>Navigation</label>
-            </li>
-            <li class="nav-item">
-              <a href="/dashboard" class="nav-link"
-                ><span class="pcoded-micon"
-                  ><i class="feather icon-home"></i></span
-                ><span class="pcoded-mtext">Dashboard</span></a
-              >
-            </li>
-            <li class="nav-item pcoded-hasmenu">
-              <a href="#!" class="nav-link"
-                ><span class="pcoded-micon"
-                  ><i class="feather icon-layout"></i></span
-                ><span class="pcoded-mtext">Page layouts</span></a
-              >
-              <ul class="pcoded-submenu">
-                <li>
-                  <a href="layout-vertical.html" target="_blank">Vertical</a>
-                </li>
-                <li>
-                  <a href="layout-horizontal.html" target="_blank"
-                    >Horizontal</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item pcoded-menu-caption">
-              <label>UI Element</label>
-            </li>
-            <li class="nav-item pcoded-hasmenu">
-              <a href="#!" class="nav-link"
-                ><span class="pcoded-micon"
-                  ><i class="feather icon-box"></i></span
-                ><span class="pcoded-mtext">Ship Vehicles</span></a
-              >
-              <ul class="pcoded-submenu">
-                <li><a href="/shipper/add-vehicle">Post a Vehicle</a></li>
-                <li><a href="/shipper/my-vehicles">My Vehicles</a></li>
-                <li><a href="/shipper/truck-listing">Search Truck Space</a></li>
-              </ul>
-            </li>
-            <li class="nav-item pcoded-hasmenu">
-              <a href="#!" class="nav-link"
-                ><span class="pcoded-micon"
-                  ><i class="feather icon-book"></i></span
-                ><span class="pcoded-mtext">Resources</span></a
-              >
-              <ul class="pcoded-submenu">
-                <li>
-                  <a href="/protected/classifieds/" label="Resources"
-                    >Classifieds</a
-                  >
-                </li>
-                <li>
-                  <a href="/protected/services/" label="Resources"
-                    >Transporter Services</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="http://www.mapquest.com/"
-                    label="Resources"
-                    id="navMaps"
-                    target="_blank"
-                    >Maps</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="http://www.mapquest.com/directions"
-                    label="Resources"
-                    id="navDirections"
-                    target="_blank"
-                    >Directions</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="http://www.nws.noaa.gov/"
-                    label="Resources"
-                    id="navWeather"
-                    target="_blank"
-                    >Weather</a
-                  >
-                </li>
-                <li>
-                  <a href="/contact-us/" label="resources" id="navContactUs"
-                    >Contact Us</a
-                  >
-                </li>
-              </ul>
-            </li>
 
-            <li class="nav-item pcoded-hasmenu">
-              <a href="#!" class="nav-link"
-                ><span class="pcoded-micon"
-                  ><i class="feather icon-aperture"></i></span
-                ><span class="pcoded-mtext">Carrier</span></a
-              >
-              <ul class="pcoded-submenu">
-                <li>
-                  <a href="/protected/classifieds/" label="Resources"
-                    >Create Truck Info</a
-                  >
-                </li>
-                <li>
-                  <a href="/protected/classifieds/" label="Resources"
-                    >Create Truck Space</a
-                  >
-                </li>
-                <li>
-                  <a href="/protected/services/" label="Resources"
-                    >View Requests</a
-                  >
-                </li>
-                <li>
-                  <a href="/protected/services/" label="Resources"
-                    >Connect to Shippers</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item pcoded-menu-caption">
-              <label>Forms &amp; table</label>
-            </li>
-            <li class="nav-item">
-              <a href="form_elements.html" class="nav-link"
-                ><span class="pcoded-micon"
-                  ><i class="feather icon-file-text"></i></span
-                ><span class="pcoded-mtext">Forms</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a href="tbl_bootstrap.html" class="nav-link"
-                ><span class="pcoded-micon"
-                  ><i class="feather icon-align-justify"></i></span
-                ><span class="pcoded-mtext">Bootstrap table</span></a
-              >
-            </li>
-            <li class="nav-item pcoded-menu-caption">
-              <label>Chart & Maps</label>
-            </li>
-            <li class="nav-item">
-              <a href="chart-apex.html" class="nav-link"
-                ><span class="pcoded-micon"
-                  ><i class="feather icon-pie-chart"></i></span
-                ><span class="pcoded-mtext">Chart</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a href="map-google.html" class="nav-link"
-                ><span class="pcoded-micon"
-                  ><i class="feather icon-map"></i></span
-                ><span class="pcoded-mtext">Maps</span></a
-              >
-            </li>
-            <li class="nav-item pcoded-menu-caption">
-              <label>Pages</label>
-            </li>
-            <li class="nav-item pcoded-hasmenu">
-              <a href="#!" class="nav-link"
-                ><span class="pcoded-micon"
-                  ><i class="feather icon-lock"></i></span
-                ><span class="pcoded-mtext">Authentication</span></a
-              >
-              <ul class="pcoded-submenu">
-                <li><a href="auth-signup.html" target="_blank">Sign up</a></li>
-                <li><a href="auth-signin.html" target="_blank">Sign in</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a href="sample-page.html" class="nav-link"
-                ><span class="pcoded-micon"
-                  ><i class="feather icon-sidebar"></i></span
-                ><span class="pcoded-mtext">Sample page</span></a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav> -->
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -233,6 +64,7 @@
 
     <script src="assets/js/vendor-all.min.js"></script>
     <script src="assets/js/plugins/bootstrap.min.js"></script>
+
     <script src="assets/js/pcoded.js"></script>
     <script src="assets/js/ripple.js"></script>
 
