--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,10 @@
     <!-- prism css -->
     <link rel="stylesheet" href="assets/css/plugins/prism-coy.css" />
     <link rel="stylesheet" href="assets/css/fontawesome/font-awesome.min.css" />
+    <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css"
+  />
     <!-- vendor css -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- <link rel="stylesheet" href="assets/css/main.css" /> -->
