--- a/public/index.html
+++ b/public/index.html
@@ -39,9 +39,25 @@
     <link rel="stylesheet" href="assets/css/plugins/prism-coy.css" />
     <link rel="stylesheet" href="assets/css/fontawesome/font-awesome.min.css" />
     <link
-    rel="stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css"
-  />
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/fonts/simple-line-icons/style.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/css/bootstrap.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
     <!-- vendor css -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- <link rel="stylesheet" href="assets/css/main.css" /> -->
