--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.css"
       type="text/css"
     />
-   
+
     <!-- prism css -->
     <link rel="stylesheet" href="assets/css/plugins/prism-coy.css" />
     <link rel="stylesheet" href="assets/css/fontawesome/font-awesome.min.css" />
@@ -53,7 +53,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
-  
+
     <!-- vendor css -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- <link rel="stylesheet" href="assets/css/main.css" /> -->
@@ -82,12 +82,9 @@
     <script src="assets/js/plugins/bootstrap.min.js"></script>
 
     <script src="assets/js/pcoded.js"></script>
-    <script src="assets/js/ripple.js"></script>
+    <!--  <script src="assets/js/ripple.js"></script> -->
 
     <!-- prism Js -->
     <script src="assets/js/plugins/prism.js"></script>
-
-
-    
   </body>
 </html>
